--- a/CSS/depart.css
+++ b/CSS/depart.css
@@ -9,11 +9,21 @@
 body{
     background-color: yellow;
 }
-#navbar{
+#navbar {
+    overflow: hidden;
+    background-color: yellow;
+    /* padding: 90px 10px; */
+    transition: 0.4s;
+    /* position: fixed; */
+    width: 100%;
+    top: 0;
+    z-index: 99;
+  }
+/* #navbar{ */
     /* background-color: lightgreen; */
-    position:fixed;
+    /* position:fixed;
     width:100%;
-}
+} */
 .main_nv {
     /* background-color: red; */
     /* max-width: 100%; */
@@ -23,6 +33,7 @@ body{
     /* padding: 20px; */
 }
 .nav_logo{
+    transition: 0.4s;
     padding: 25px;
 }
 .nav_right{
@@ -70,9 +81,6 @@ body{
     text-align: center;
     /* margin-bottom: 30%; */
 }
-.hiring h1{
-   font-size:35px;
-}
 .container_1{
     /* background-color: aqua; */
     padding-top: 5%;
@@ -82,12 +90,12 @@ body{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .card{
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: column; */
     margin: 10px 20px;
     background-color: white;
     box-shadow: 0 0 15px rgba(0,0,0,0.8);
@@ -101,7 +109,10 @@ body{
     text-align: center;
 }
 .hiring-bottom{
-    padding: 5%;
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: ; */
+    padding: 50px;
 }
 .card i{
     font-size: 40px;
@@ -144,16 +155,14 @@ body{
 }
 .department{
     /* margin: 10px; */
-    /* background-color: red; */
     height: auto;
-    /* background-color: red; */
 }
 
 .container-3{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-     position: relative;
+     /* position: relative; */
 }
 .image{
     transition: all 0.3s;
