--- a/CSS/about.css
+++ b/CSS/about.css
@@ -103,18 +103,10 @@ body {
     opacity: 0.3;
 }
 
-
-.awards {
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    color: white;
-    /* border: 4px solid red; */
-}
-
 .awardstop {
     /* background-color: red; */
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
     padding-left: 30px;
 }
@@ -133,21 +125,18 @@ body {
     opacity: .5;
     transition: .9s;
 }
-
-.awardsbttm {
-    padding: 30px;
-    /* background-color: blue; */
-    color: white;
+.middle{
+    /* background-color: aqua; */
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
-    flex-direction: row;
 }
-
-.awardsbttm p {
-    text-align: center;
-    font-weight: bolder;
+.bts_bottom{
+    /* background-color: aquamarine; */
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
-
 .text-4,
 .text-7 {
     padding: 30px;
@@ -159,15 +148,29 @@ body {
 .txt {
     padding-top: 5%;
 }
-
-.smallimg {
+.top{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
-    padding-top: 5%;
+    padding: 5px 0px;   
+    /* background-color: red; */
 }
-
-.smallimg-2 {
-    padding-top: 20px;
+.mid{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5px 0px;
+    /* background-color: green; */
+}
+.bottom{
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5px 0px;       
 }
 /* .imgarea{ */
 /* padding-top:5% ; */
@@ -177,136 +180,41 @@ body {
     /* background-color: blue; */
 /* }  */
 
-.imgarea .img img,
-.imgarea-2 .img img {
-    padding: 20px 20px;
-    max-width: 500px;
-}
 
-.imgarea,
-.imgarea-2 {
-    display: flex;
-    flex-wrap: wrap;
-    cursor: pointer;
-}
-
-.imgarea img:hover,
-.imgarea-2 img:hover {
-    opacity: .5;
-    transition: .9s;
-}
-
-/*awards */
-
-.container-3{
-    text-align: center;
-    position: relative;
-    padding: 20px;
-    width: 100%;
-    cursor: pointer;
-
-}
-.awrdtext-3{
-    transition: 0.5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 40%;
-    left: 45%;
-    display: inline-block;
+.txt-2{
     color: white;
-    font-size: 18px;
-}
-/* #awrd{
-    margin-left: 20%;
-} */ 
-.container-4{
-    position: relative;
+   font-family: 'Alkatra', cursive;
     /* background-color: red; */
+    /* display: flex;
+    justify-content: space-between; */
+}
+.container-3{
+    /* background-color: aqua; */
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0px;
+    text-align: center;
+}
+.container-4{
+    /* background-color: aquamarine; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
-    cursor: pointer;
-
-}
-.awrdtext-4{
-   transition: 0.5s ease;
-   opacity: 0;
-    /* top: 40%; */
-    /* right: 5px; */
-    /* background-color: blue; */
-  /* position: absolute; */
-  display: inline-block;
-  font-size: 20px;
-  color: white; 
-  /* background-color: blue; */
-  /* padding-top: 10%; */
-}
-#awrd-2{
-    position: absolute;
-    left: 22%;
-    top: 40%;
-}
-#awrd-3{
-    position:absolute;
-    right: 20%;
-    top: 40%;
-}
-.container-3:hover img{
-    opacity: 0.3;
-
-}
-.container-3:hover .awrdtext-3{
-    opacity: 1;
-}
-.container-4:hover .awrdtext-4{
-    opacity: 1;
-}
-.container-4:hover img{
-    opacity: 0.3;
+    padding: 5px 0px;
+    text-align: center;
 }
 .container-5{
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0px;
     text-align: center;
-    padding: 20px;
-    position: relative;
-    cursor: pointer;
-
 }
-.awrdtext-5{
-    transition: 0.5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 40%;
-    right: 40%;
-    display: inline-block;
-    color: white;
-    font-size: 18px;
-}
-.container-5:hover img{
-    opacity: 0.3;
-}
-.container-5:hover .awrdtext-5{
-    opacity: 1;
-}
-
-/* #awrd-3{
-    position: absolute;
-    left: 15%;
-    padding-top: 10%;
-    text-align: center; */
-    
-    /* padding-top: 50%; */
-/* } */
-/* #awrd-4{
-    position: relative;
-    left: 30%;
-    padding-top: 10%;
-} */
 .text-6 {
     padding-top: 10%;
 }
-
-
 .footer {
     width: 100%;
     color: white;
@@ -394,38 +302,44 @@ body {
         justify-content: center;
         align-items: center;
     }
-}
-
-
-
-@media screen and(max-width:997px) and(max-width:767px) {
-    .awards,.imgarea, .imgarea-2 {
-        max-width: 100%;
+    .container-3,
+    .container-4,
+    .container-5{
+        flex-direction: column;
+    }
+    .top,
+    .bottom{
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-    .container-4{
-        position: relative;
-    }
-    /* #awrd-2{
-       position: absolute;
-       bottom: 50%;
-
-    } */
- 
-}
-
-
-@media screen and(max-width:567) {
-    .imgarea {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
         flex-wrap: wrap;
-        /* align-self: center;
-        align-items: center; */
-    }
-
-
+        flex-direction: column;
+    } 
 }
+@media screen and (max-width:575px){
+    .awrdtext-3{
+        position: absolute;
+        right: 20%;
+    }
+    .container-3{
+        flex-wrap: wrap;
+        margin-right: 30%;
+    
+        }
+        .container-3,
+        .container-4,
+        .container-5{
+            flex-direction: column;
+        }
+        .container-3{
+            margin-left: 10%;
+        }
+        .container-4{
+            margin-top: 20%;
+        }
+       
+}
+
+
+
+
